
2009-03-01	
Initial Project in ajcodekatas
Lexer
String, Quoted Strings, Names in Lexer
Operators, Separators in Lexer

2009-08-14
BindingEnvironment with tests
ICommand
IExpression
ConstantExpression with tests
SetLocalVariableCommand with tests
Parser with tests
Parser.ParseExpression, .ParseCommand first version

2009-08-15
BinaryExpression
ArithmeticOperator
ArithmeticBinaryExpression
UnaryExpression
ArithmeticUnaryExpression
Evaluation tests
Execution tests