@@ -46,8 +46,11 @@
     <Compile Include="ExecutionTests.cs" />
     <Compile Include="ExpressionTests.cs" />
     <Compile Include="LexerTests.cs" />
+    <Compile Include="Mocks\MockClass.cs" />
+    <Compile Include="Mocks\MockObject.cs" />
     <Compile Include="ParserTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UtilitiesTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\AjRuby\AjRuby.csproj">
